使用 Colaboratory 建立

--- a/Product_Data_Converter.ipynb
+++ b/Product_Data_Converter.ipynb
@@ -6,7 +6,7 @@
       "name": "Product Data Converter.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO6+wd1f5qkYv8PuNbvMmuC",
+      "authorship_tag": "ABX9TyOkRME8Kyk1HP59uaMg8v1o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,8 +74,6 @@
         "df_column = pd.read_excel(path, sheet_name = 1)\n",
         "df_column = df_column.drop(columns = '原始資料欄位名稱', axis = 1)\n",
         "\n",
-        "# print(df_column.columns[0])\n",
-        "# print(df_column.values[0][0:2])\n",
         "column_EN = []\n",
         "column_CH = []\n",
         "Translation = {}\n",
@@ -83,9 +81,7 @@
         "  column_EN.append(df_column.columns[i])\n",
         "  column_CH.append(df_column.values[0][i])\n",
         "  Translation[column_EN[i]] = column_CH[i]\n",
-        "print(Translation)\n",
-        "  # dict = dict[column_EN[i] : (column_CH[i])]\n",
-        "  # print(dict)"
+        "print(Translation)"
       ],
       "metadata": {
         "id": "F7tJy1uU1px1",
@@ -116,8 +112,6 @@
         "  df = df.reset_index()\n",
         "  df = df.drop(columns='index')\n",
         "\n",
-        "  # print(df.columns[0])\n",
-        "  # print(df.values[0][0:2])\n",
         "  column_SAPSBU = []\n",
         "  column_Product = []\n",
         "  ConvertDict = {}\n",
@@ -286,7 +280,7 @@
         "Path_beta = \"/content/beta.csv\"\n",
         "Beta = pd.read_csv(Path_beta, header=0)\n",
         "Beta = pd.DataFrame(columns=Beta.columns)\n",
-        "print(Beta)\n",
+        "# print(Beta)\n",
         "\n",
         "Beta[\"屬性 1 值\"] = Beta[\"貨號\"] = New_df[\"產品編號\"]\n",
         "Beta[\"屬性 2 值\"] = Beta[\"名稱\"] = Beta[\"簡短內容說明\"] = New_df[\"英文名稱\"]\n",
@@ -314,8 +308,7 @@
         "  Beta[f\"屬性 {X} 名稱\"] = PropertyNname[(X-1)]\n",
         "\n",
         "\n",
-        "print(New_df.keys())\n",
-        "\n",
+        "# print(New_df.keys())\n",
         "print(Beta.head().to_string())"
       ],
       "metadata": {
@@ -353,6 +346,7 @@
         "# 4. save file as .csv and output.\n",
         "Beta.to_csv(path_or_buf = \"產品資訊_Zh-TW.csv\", sep = \",\", na_rep = \"\",\n",
         "       index = False, encoding = \"Big5\")\n",
+        "\n",
         "end = perf_counter() \n",
         "print(end-start)"
       ],
