使用 Colaboratory 建立

--- a/Product_Data_Converter.ipynb
+++ b/Product_Data_Converter.ipynb
@@ -6,7 +6,7 @@
       "name": "Product Data Converter.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIp5+/+w4P/8OUX4yo3g0f",
+      "authorship_tag": "ABX9TyOLflr2irLXrqjOmr8EnrcI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,9 +40,12 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from time import perf_counter\n",
+        "# from time import perf_counter\n",
         "from google.colab import files\n",
         "import io\n",
+        "import time\n",
+        "import datetime\n",
+        "import os\n",
         "\n",
         "\n",
         "pd.set_option('max_columns', None)\n",
@@ -368,10 +371,6 @@
       "cell_type": "code",
       "source": [
         "# 4. save file as .csv and output.\n",
-        "import time\n",
-        "import datetime\n",
-        "import os\n",
-        "\n",
         "\n",
         "!mkdir \"產品資訊_Zh-TW\"\n",
         "n = 0\n",
