--- a/Product_Data_Converter_v2.ipynb
+++ b/Product_Data_Converter_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Product Data Converter_v2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+BknbZqx8uOGSyADuwobL",
+      "authorship_tag": "ABX9TyP/VKuNHumFXSlWmDIuVlgw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "g9ej7XMUO8Tt",
         "colab": {
@@ -67,7 +67,7 @@
         "# 1. read file\n",
         "path = 'https://github.com/Xi123580/Product-Information-Conversion/blob/main/%E7%94%A2%E5%93%81%E8%B3%87%E8%A8%8A_%E5%8E%9F%E5%A7%8B%E8%B3%87%E6%96%99_%E6%AC%84%E4%BD%8D%E8%BD%89%E6%8F%9B%E8%A1%A8_%E8%B3%87%E6%96%99%E8%BD%89%E6%8F%9B%E8%A1%A8_20220421_1.xlsx?raw=true'\n",
         "df_rawData = pd.read_excel(path, sheet_name = 0)\n",
-        "print(df_rawData.head().to_string())\n"
+        "# print(df_rawData.head().to_string())\n"
       ]
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "F-8l97HASYA5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,8 +105,8 @@
         "Rule_IFCI = initial_sheet(5)\n",
         "Rule_SAPNOR = initial_sheet(6)\n",
         "Rule_IPURC = initial_sheet(7)\n",
-        "print(Rule_IFCI)\n",
-        "print(Rule_IMCMTH)"
+        "# print(Rule_IFCI)\n",
+        "# print(Rule_IMCMTH)"
       ],
       "metadata": {
         "id": "Ai_jtrDCoiIK",
@@ -115,7 +115,7 @@
         },
         "outputId": "139294c1-eb89-480c-e23d-bbd1f0e223b8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "# Start_1 = perf_counter()\n",
         "filename = next(iter(uploaded))\n",
         "uploaded = pd.read_excel(io.BytesIO(uploaded.get(f'{filename}')), dtype=str)\n",
-        "print(uploaded.head(3).to_string())"
+        "# print(uploaded.head(3).to_string())"
       ],
       "metadata": {
         "colab": {
@@ -160,7 +160,7 @@
         "id": "gwNu1X1PrXGX",
         "outputId": "61b6bf1b-b5a4-4761-c9ea-2e94065fee00"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,17 +285,19 @@
         "\n",
         "# Change Title\n",
         "# New_df = New_df.rename(Translation, axis=1)\n",
+        "New_df = New_df[['IPROD', 'IDESC', 'IMNOT1', 'IDRAW', 'SAPSBU', 'ILIST', 'IMFRMC',\n",
+        "       'IMCMTH', 'IFCI', 'SAPNOR', 'IPURC']]\n",
         "\n",
-        "print(New_df.head().to_string())"
+        "# print(New_df.head().to_string())"
       ],
       "metadata": {
         "id": "84q-8GTphQ_Y",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "82c65f8a-688d-4442-f9a9-42270c27020e"
+        "outputId": "52a06e24-ee87-4d2c-e368-0e6c1d29538a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,12 +307,12 @@
             "       'IFCI', 'IMCMTH', 'SAPNOR', 'IPURC'],\n",
             "      dtype='object')\n",
             "(277900, 11)\n",
-            "         IPROD                                     IDESC                                    IMNOT1       IDRAW                           SAPSBU ILIST         IMFRMC IFCI IMCMTH SAPNOR IPURC\n",
-            "0  185450-100G  Phenol, unstabilized, ReagentPlus, >=99%  GUS: PHENOL, UNSTABILIZED, REAGENTPLUS(R    108-95-2  LSC_774 Chemical Synthesis - RC  2900  無管制_但請再確認注意事項   空運      -      -   Red\n",
-            "1    I2215-25G                            5-INDANOL, 99%                       GUS: 5-INDANOL, 99%   1470-94-6  LSC_774 Chemical Synthesis - RC  3200  無管制_但請再確認注意事項   空運      -      -   Red\n",
-            "2  110388-25ML                    BUTYLCYCLOHEXANE, 99+%                    BUTYLCYCLOHEXANE, 99+%   1678-93-9  LSC_774 Chemical Synthesis - RC  2600  無管制_但請再確認注意事項   空運      -      -   Red\n",
-            "3    661384-1G  2-Iodoxybenzoic acid, stabilized (45 wt.  2-IODOXYBENZOIC ACID, STABILIZED (45 WT&  61717-82-6  LSC_774 Chemical Synthesis - RC  2300  無管制_但請再確認注意事項   空運      -      -   Red\n",
-            "4    107891-1L                  2-ISOPROPOXYETHANOL, 99%             GUS: 2-ISOPROPOXYETHANOL, 99%    109-59-1  LSC_774 Chemical Synthesis - RC  2400  無管制_但請再確認注意事項   空運      -      -   Red\n"
+            "         IPROD                                     IDESC                                    IMNOT1       IDRAW                           SAPSBU ILIST         IMFRMC IMCMTH IFCI SAPNOR IPURC\n",
+            "0  185450-100G  Phenol, unstabilized, ReagentPlus, >=99%  GUS: PHENOL, UNSTABILIZED, REAGENTPLUS(R    108-95-2  LSC_774 Chemical Synthesis - RC  2900  無管制_但請再確認注意事項      -   空運      -   Red\n",
+            "1    I2215-25G                            5-INDANOL, 99%                       GUS: 5-INDANOL, 99%   1470-94-6  LSC_774 Chemical Synthesis - RC  3200  無管制_但請再確認注意事項      -   空運      -   Red\n",
+            "2  110388-25ML                    BUTYLCYCLOHEXANE, 99+%                    BUTYLCYCLOHEXANE, 99+%   1678-93-9  LSC_774 Chemical Synthesis - RC  2600  無管制_但請再確認注意事項      -   空運      -   Red\n",
+            "3    661384-1G  2-Iodoxybenzoic acid, stabilized (45 wt.  2-IODOXYBENZOIC ACID, STABILIZED (45 WT&  61717-82-6  LSC_774 Chemical Synthesis - RC  2300  無管制_但請再確認注意事項      -   空運      -   Red\n",
+            "4    107891-1L                  2-ISOPROPOXYETHANOL, 99%             GUS: 2-ISOPROPOXYETHANOL, 99%    109-59-1  LSC_774 Chemical Synthesis - RC  2400  無管制_但請再確認注意事項      -   空運      -   Red\n"
           ]
         }
       ]
@@ -333,11 +335,11 @@
         "id": "A5Vp7NnyLfzL",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "58f87c1c-7b7d-46ae-8fe3-ec62b38a52fd"
+        "outputId": "b1689c00-9131-47c1-8d34-f5dfa81810da"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -398,7 +400,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_798b2725-504c-435f-aa78-596a9ad092e3\", \"ProductData_2022-07-23.csv\", 46416024)"
+              "download(\"download_9d4d8b61-551c-4fcf-a393-2b09c315bce5\", \"ProductData_2022-07-23.csv\", 46416024)"
             ]
           },
           "metadata": {}
