使用 Colaboratory 建立

--- a/Product_Data_Converter_v2_CSV.ipynb
+++ b/Product_Data_Converter_v2_CSV.ipynb
@@ -8,7 +8,7 @@
         "1CY4b2liHUZe",
         "qrsZfhoIMYbq"
       ],
-      "authorship_tag": "ABX9TyMsxWh3yHbN4FV9jEp97xSH",
+      "authorship_tag": "ABX9TyNs5VatyrkpCQiVd7DtCK/F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "g9ej7XMUO8Tt"
       },
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "F-8l97HASYA5"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -101,36 +101,10 @@
         "# print(Rule_IPURC)"
       ],
       "metadata": {
-        "id": "Ai_jtrDCoiIK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8ec7ef52-83ef-4b67-e0a2-154c410061c8"
+        "id": "Ai_jtrDCoiIK"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'034': 'LSB_034 ELISAs & Specialty Assays', '035': 'DX_035 Detection systems and reagents', '036': 'DX_036 Dekalb CMO', '037': 'DX_037 Oligo Controls and Reference Materials', '052': 'AA_052 Extractions- F&F', '053': 'AA_053 Natural - F&F', '054': 'AA_054 Synthetics - F&F', '056': 'DX_056 Diagnostic Beads', '057': 'DX_057 Magprep', '058': 'DX_058 PROCLIN', '063': 'BM_063 In Process Testing Pharma', '064': 'BM_064 In Process Testing Food&Beverages', '065': 'BM_065 Release Testing Pharma', '066': 'BM_066 Release Testing Food&Beverages', '067': 'BM_067 Environmental Monitoring Pharma', '068': 'BM_068 Environmental Monitoring Food&Beverages', '069': 'BM_069 Media Sigma', '072': 'BM_072 In Process Products Medical', '073': 'BM_073 BioMonitoring Services', '077': 'PS-GENE_077 IP Outlicensing', '090': 'ConLab_090 Digital Lab Applications', '091': 'ConLab_091 BSSN Products', '092': 'ConLab_092 Other Digital Lab Platforms', '093': 'ConLab_093 Connected Lab Growth Initiatives', '480': 'LSC_480 Solvents for Research', '499': 'LSC_499 BioChem Core', '517': 'DX_517 Assay Development Services', '519': 'AA_519 Rapid Chemical Testing', '524': 'AA_524 Organic Analysis & Sensorics', '525': 'AA_525 Elemental Analysis', '526': 'AA_526 Solvents Instrumental Analysis', '527': 'AA_527 Analytical Technologies', '528': 'AA_528 Thin-Layer Chromatography', '529': 'AA_529 Mobile and Photometry Workflows', '530': 'AA_530 Endogenous Metabolites And Natural Products', '531': 'AA_531 Drugs & Metrological Institutes', '532': 'AA_532 Organic & Inorganic Contaminants', '533': 'AA_533 Additional, Phys Prop & Matrix', '534': 'AA_534 Endogenous Metabolites And Natural Products', '535': 'AA_535 Drugs & Metrological Institutes', '536': 'AA_536 Organic & Inorganic Contaminants', '537': 'AA_537 Additional, Phys Prop & Matrix', '538': 'AA_538 Sample Preparation Workflows', '539': 'AA_539 LPLC / Carbon', '540': 'AA_540 HPLC', '541': 'AA_541 Gas Chromatography', '542': 'AA_542 Analytical & General Lab Equipment', '604': 'DX_604 Light DX Kits', '605': 'LSB_605 Analytical Workflow Tools', '614': 'LSB_614 Protein Detection Instruments', '615': 'LSB_615 Licensing', '635': 'DX_635 Lateral Flow Membrane (CA)', '637': 'DX_637 Livingston CMO', '638': 'DX_638 OEM Roll Stock (CD)', '639': 'DX_639 Blood Typing (CE)', '640': 'DX_640 Diagnostic Bulk and Custom (CF)', '643': 'LW_643 Accessories', '644': 'LW_644 Consumables', '645': 'LW_645 Hardware', '646': 'LW_646 Rental', '647': 'LW_647 Instrument Services', '649': 'DX_649 H & H - Blue', '650': 'LSC_650 Organics', '653': 'PS-BP_653 Global Customer Training & BSN (NA)', '655': 'PS-BP_655 BioDevelopment and Manufacturing Support Services (RW)', '656': 'PS-BP_656 Mobius Disposable Assemblies (RS)', '657': 'PS-BP_657 Single-Use Bioreactors Assemblies (RX)', '658': 'PS-BP_658 Sterile Sampling (TG)', '660': 'PS-BP_660 Virus Removal Products (RE)', '662': 'PS-BP_662 Integrity Testers (RH)', '663': 'PS-BP_663 Clarification Products (RB)', '664': 'PS-BP_664 TFF Expendables (RC)', '666': 'PS-BP_666 Housings (RU)', '668': 'PS-BP_668 NovAseptic Systems Components (RT)', '669': 'PS-BP_669 AO Supplements', '670': 'PS-BP_670 NAO Supplements & Manufacturing Aids', '671': 'DX_671 Probumin (TD)', '674': 'PS-BP_674 Cell Culture Media', '677': 'PS-AF_677 Solid Application', '678': 'PS-AF_678 Liquid Application', '680': 'PS-AF_680 Advanced Drug Delivery', '682': 'PS-AF_682 Non-GMP Raw Materials - MM', '687': 'LSB_687 Concentration & Separation', '689': 'LSB_689 Cell & Screening Tools', '693': 'LSB_693 Multiplex Protein Detection', '694': 'LSB_694 Core Cell Culture', '696': 'LSB_696 Antibody Technologies', '698': 'LSB_698 BSM and Signaling Proteins', '702': 'LSC_702 Classical Inorganics for QC', '704': 'PS-E2E_704 BioDev&Mfg Supp Sol', '710': 'LSB_710 Molecular Prep & PCR', '711': 'DX_711 Meridian', '733': 'AA_733 POU Service', '736': 'LSC_736 Classical Solvents for QC', '737': 'LSC_737 Safety & Essentials', '738': 'PS-BP_738 Durapore Cartridges & Capsules', '739': 'PS-BP_739 Express Cartridges & Capsules', '740': 'PS-BP_740 Gas Cartridges & Capsules', '741': 'PS-BP_741 Pre/Depth Filter Cartridges & Capsules', '742': 'PS-BP_742 Mobius Disposable Mixing Assemblies', '743': 'PS-BP_743 Disposable Connectors', '744': 'PS-BP_744 Single-Use Systems Assemblies', '746': 'PS-BP_746 Equipment Installation and Qualification Services', '747': 'PS-BP_747 Equipment Maintenance Services', '748': 'PS-BP_748 Equipment Spare Parts', '749': 'PS-S_749 BioReliance Core Validation Services', '750': 'PS-S_750 BioReliance E&L Validation Services', '755': 'LSB_755 Roche & Alliances', '760': 'LSB_760 Protein Prep & Reagents', '766': 'LSB_766 SMC', '768': 'LSB_768 Specialty Cell Culture', '769': 'LSB_769 Cell Culture Sera', '773': 'LSC_773 Discovery Chemistry & Services', '774': 'LSC_774 Chemical Synthesis - RC', '775': 'LSC_775 Stable Isotopes', '777': 'LSC_777 Biochem Specialty & Kits', '778': 'LSC_778 Inorganics for Research', '780': 'LSC_780 Material Science', '781': 'LSB_781 Premier & Partnerships', '784': 'DX_784 MBS reagents', '785': 'PS-GENE_785 Cell Engineering', '787': 'DX_787 Oligos Manufacturing', '788': 'PS-GENE_788 Genome Editing Tools', '789': 'DX_789 CMO Rest of World', '790': 'DX_790 H & H - Red', '799': 'DX_799 Proligo Components', '800': 'LSB_800 Protein Detection Instrument Svs', '806': 'PS-BP_806 Dry Powder Media', '807': 'PS-BP_807 Growth Factors', '823': 'LSB_823 Non-LR4 Materials', '841': 'PS-BP_841 Final Fill', '842': 'PS-BP_842 Sera', '843': 'PS-BP_843 Custom Trypsin', '844': 'PS-BP_844 AO Trypsin', '845': 'PS-BP_845 Biopharmaceutical Expression Systems', '873': 'PS-S_873 Gene Tox Services', '877': 'PS-S_877 Biotesting Routine', '883': 'PS-S_883 Clearance Services', '894': 'DX_894 Cell Marque', '898': 'LSB_898 SMC Instrument Service', '920': 'AA_920 Solutions - F&F', '926': 'DX_926 Ewing CMO', '69E': 'LSB_69E Electrophoresis - WB', '89A': 'DX_89A OEM Cell Marque', 'NAS': 'PS-BP_NAS Natrix Separations', 'P01': 'PS-BP_P01 USP Chemicals MM', 'P02': 'PS-BP_P02 DSP Functional Chemicals MM', 'P03': 'PS-BP_P03 USP Chemicals SIAL', 'P04': 'PS-BP_P04 Powder Buffers SIAL', 'P05': 'PS-BP_P05 DSP Functional Chemicals SIAL', 'P06': 'PS-BP_P06 Processing Solutions SIAL', 'P07': 'PS-BP_P07 BioPharm Materials Specialty Chemicals SIAL', 'P08': 'PS-BP_P08 Standard Hardware', 'P09': 'PS-BP_P09 Custom Hardware', 'P10': 'PS-BP_P10 Powder Buffers MM', 'P11': 'PS-BP_P11 Processing Solutions MM', 'P12': 'PS-BP_P12 Immediate Advantage and Services', 'P13': 'PS-BP_P13 Upstream Liquids', 'P14': 'PS-BP_P14 Media Development Services', 'P15': 'PS-BP_P15 BioProcessing Software', 'P21': 'PS-BP_P21 Affinity Chromatography Media', 'P22': 'PS-BP_P22 IEX Chromatography Media', 'P23': 'PS-BP_P23 Inorganic Sorbents', 'P24': 'PS-BP_P24 Prepacked Columns', 'P31': 'PS-AF_P31 Folates & Innovative Technologies', 'P32': 'PS-AF_P32 Biopharm Ingredients', 'P33': 'PS-AF_P33 Cleaning in Place', 'P34': 'PS-AF_P34 API - MM', 'P35': 'PS-AF_P35 GMP Raw Materials - MM', 'P36': 'PS-AF_P36 Contract Manufacturing - MM', 'P41': 'PS-AF_P41 Potent Conjugates', 'P42': 'PS-AF_P42 Complex API', 'P43': 'PS-AF_P43 Non-Potent Conjugates', 'P44': 'PS-AF_P44 HPAPI', 'P45': 'PS-AF_P45 Linker/Payloads', 'P47': 'PS-AF_P47 Formulation - SIAL', 'P48': 'PS-AF_P48 GMP Raw Materials - SIAL', 'P49': 'PS-AF_P49 API - SIAL', 'P51': 'PS-AF_P51 Non GMP Raw Materials - SIAL', 'P57': 'PS-BP_P57 POC Entries PS', 'P60': 'PS-GENE_P60 FDS', 'P61': 'PS-GENE_P61 Cell Therapy', 'P62': 'PS-GENE_P62 Viral & Gene Therapy', 'P63': 'PS-S_P63 Cell Bank Manufacturing', 'P67': 'PS-BP_P67 Mobius Assemblies Transport and Storage Systems', 'P68': 'PS-BP_P68 Single-Use Bioreactors Systems (RX)', 'P69': 'PS-S_P69 Product Characterization', 'P70': 'PS-BP_P70 Mobius Disposable Mixing Systems', 'P71': 'PS-BP_P71 Single-Use Systems', 'P72': 'PS-AF_P72 PEGs', 'P73': 'PS-GENE_P73 Microbiome Services', 'P74': 'PS-AF_P74 mRNA', 'Q13': 'PS-E2E_Q13 Consultancy Services PS', 'RSP': 'PS-BP_RSP PAT Solutions', 'TTA': nan, 'XXE': nan, 'XXF': nan}\n",
-            "{'\"': '無管制_但請再確認注意事項', '.': '無管制_但請再確認注意事項', '90': 'CD_請洽詢默克窗口', 'AGT': '石油相關產品_請洽詢默克窗口', 'BIO': '生物產品_客戶需申請進口許可函', 'BIONC': '生物產品+新化_客戶需申請進口許可函', 'CAB': '管制射頻(無線/藍芽)器材_需先查詢默克是否有證', 'DBT': '可拋棄容器_請洽詢默克窗口', 'DEA': '管制藥品_客戶需要有管制藥品證, 無法經銷', 'EP4': '第四類毒化物_客戶需有毒化物證', 'EPA': '毒化物_客戶需有毒化物證', 'FA': '食品添加物_需先查詢默克是否有證', 'FD': '原料藥_需先查詢默克是否有證', 'FDA': '食品添加物+原料藥_需先查詢默克是否有證', 'FDQOT': '原料藥+未變性酒精_需先查詢默克是否有證', 'HG': '具有危害性的關注化學物質_客戶需要申請核可文件', 'IVD': '醫療器材_需先查詢默克是否有證', 'IVDAB': '醫療器材+_需先查詢默克是否有證', 'NC': '新化學物質_需透過默克申請新化證', 'NIR': '待審核_請洽詢默克窗口', 'PRE': '先驅化學品甲類_終端客戶需申報', 'QOT': '未變性酒精_只銷售終端客戶', 'RA': '其他管制品項_請洽詢默克窗口', 'RANC': '其他管制品項+新化_請洽詢默克窗口', 'RAT': '限制輸入_請洽詢默克窗口', nan: '無管制_但請再確認注意事項'}\n",
-            "{'7': '已停產', '99': '需法規審核', 'M1': '已停產', 'M2': '已停產', 'YY': '已停產', '07': '已停產'}\n",
-            "{'A': '空運', 'AIR': '空運', 'C': '空運', 'L': '請洽默克窗口', 'N': '請洽默克窗口', nan: '請洽默克窗口', 'P': '空運', 'PAX': '空運', 'S': '海運', 'SEA': '海運', 'Y': '請洽默克窗口'}\n",
-            "{'Y': '已停產', '   ': nan}\n",
-            "{'M2A': 'Red', 'M2B': 'Blue', 'M2C': 'Blue', 'M2D': 'Blue', 'M2E': 'Blue', 'M2F': 'Blue', 'M2G': 'Blue', 'M2H': 'Blue', 'M2I': 'Blue', 'M2J': 'Blue', '   ': 'Blue'}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 上傳檔案"
-      ],
-      "metadata": {
-        "id": "P_embNneGuLV"
-      }
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -159,11 +133,11 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 93
+          "height": 423
         },
-        "outputId": "8762c6a0-91ec-48a5-a3f0-b0a5158371cf"
+        "outputId": "827bfe87-7dac-4786-dcb2-2e157b3d9f05"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,9 +154,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-52e93e85-d044-4000-ba15-ae371b7aafb9\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-498e6945-ca06-42d1-a6af-0b936df3beb0\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-52e93e85-d044-4000-ba15-ae371b7aafb9\">\n",
+              "     <output id=\"result-498e6945-ca06-42d1-a6af-0b936df3beb0\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -192,10 +166,18 @@
           "metadata": {}
         },
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving IIM_Product_List_utf8v2.csv to IIM_Product_List_utf8v2.csv\n"
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-d828a7a41124>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# upload file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"請上傳CSV檔 (副檔名須為.csv): \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0muploaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muploaded\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muploaded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36mupload\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m   \"\"\"\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m   \u001b[0muploaded_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_upload_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultiple\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m   \u001b[0;31m# Mapping from original filename to filename as saved locally.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m   \u001b[0mlocal_filenames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36m_upload_files\u001b[0;34m(multiple)\u001b[0m\n\u001b[1;32m    116\u001b[0m   result = _output.eval_js(\n\u001b[1;32m    117\u001b[0m       'google.colab._files._uploadFiles(\"{input_id}\", \"{output_id}\")'.format(\n\u001b[0;32m--> 118\u001b[0;31m           input_id=input_id, output_id=output_id))\n\u001b[0m\u001b[1;32m    119\u001b[0m   \u001b[0mfiles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_collections\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefaultdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/output/_js.py\u001b[0m in \u001b[0;36meval_js\u001b[0;34m(script, ignore_result, timeout_sec)\u001b[0m\n\u001b[1;32m     38\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mignore_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0m_message\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_next_input_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_NOT_READY\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.025\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m       \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m     if (reply.get('type') == 'colab_reply' and\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
@@ -300,25 +282,10 @@
         "# print(New_df.head().to_string())"
       ],
       "metadata": {
-        "id": "84q-8GTphQ_Y",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4445c8a6-7478-4aa4-f38e-31b89de700a7"
+        "id": "84q-8GTphQ_Y"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Index(['IPROD', 'IDESC', 'IMNOT1', 'IDRAW', 'SAPSBU', 'ILIST', 'IMFRMC',\n",
-            "       'IFCI', 'IMCMTH', 'SAPNOR', 'IPURC'],\n",
-            "      dtype='object')\n",
-            "(279477, 11)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
